change text from english to ita

--- a/Frontend/navbar.html
+++ b/Frontend/navbar.html
@@ -21,8 +21,8 @@
        
        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
          <div class="navbar-nav">
-           <a class="nav-item nav-links" href="#" >Cards</a>
-           <a class="nav-item nav-links" href="#">Decks</a>
+           <a class="nav-item nav-links" href="#" >Carte</a>
+           <a class="nav-item nav-links" href="#">Mazzi</a>
               <a class="nav-pic" href="#"> <img alt="User Logo" width=30 height=30></a>
          </div>
        </div>
