--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="/css-main/nav.css">
-    <link rel="stylesheet" href="/css-register/register.css">
+    <title>Register Page</title>
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/register.css">
       
 
 </head>
@@ -16,7 +16,7 @@
         <div class="losgo-home">
             <!-- Logo -->
             <a >
-                <img src="../static/img/logo.png" alt="Logo" class="nav-pic" width="90px" height="30px">
+                <img src="img/logo.png" alt="Logo" class="nav-pic" width="200px" height="30px">
             </a>
 
             <!-- Link Home -->
@@ -36,7 +36,7 @@
 	<br/>
 	<div class ="bic">
     <div class="container">
-        <img src="../static/img/logo.png    " alt="Logo" class="logo">
+        <img src="img/logo.png" alt="Logo" class="logo">
         <form class="register-form" method="post" th:action="@{/login}" role="form">
 
             <input 
