typo:fix src for css

--- a/Frontend/user-page.html
+++ b/Frontend/user-page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
-    <link rel="stylesheet" href="user-page.css">
+    <title>Profilo Utente</title>
+    <link rel="stylesheet" href="./css/user-page.css">
     <style>
        
     </style>
@@ -15,7 +15,7 @@
         <div class="logo-home">
             <!-- Logo -->
             <a >
-                <img src="../static/img/logo.png" alt="Logo" class="nav-pic" width="90px" height="30px">
+                <img src="./img/logo.png" alt="Logo" class="nav-pic" width="90px" height="30px">
             </a>
 
             <!-- Link Home -->
@@ -27,7 +27,7 @@
             <a class="cards-decks" href="#">mazzo</a>
            </div>
          <div class="bars-nav">
-            <a class="nav-pic" href="#"> <img src="../static/img/pokeball.svg" alt="User Logo" width=30 height=30></a>
+            <a class="nav-pic" href="#"> <img src="./img/pokeball.svg" alt="User Logo" width=30 height=30></a>
          </div>
        
     </nav>
@@ -36,11 +36,11 @@
 <br/>
 <div class ="bic">
     <div class="profile">
-        <img src="../static/img/pokeball.svg" alt="User Logo" width=100 height=100>
+        <img src="./pokeball.svg" alt="User Logo" width=100 height=100>
       <!--  <img th:src="${logo}" alt="User Logo" width=100 height=100> -->
-      <h2><span th:text="${username}">PokeGai</span></h2>
-        <button>Cards</button>
-        <button>Decks</button>
+      <h2><span >PokeGai</span></h2>
+        <button>Carte</button>
+        <button>Mazzi</button>
     </div>
 </div>
 </body>
