--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -23,8 +23,7 @@
             <a class="home" href="#" >Home</a>
         </div>
         <div>
-            <a  class="nav-pic" href="about.html">Login</a>
-
+            <a id="logind"  href="about.html">Login</a></a>
         </div>
        
      </nav>
@@ -37,7 +36,7 @@
 	<div class ="bic">
     <div class="container">
         <img src="img/logo.png" alt="Logo" class="logo">
-        <form class="register-form" method="post" th:action="@{/login}" role="form">
+        <form class="register-form" method="post"  role="form">
 
             <input 
                 type="email" 
