--- a/Frontend/user-page.html
+++ b/Frontend/user-page.html
@@ -15,7 +15,7 @@
         <div class="logo-home">
             <!-- Logo -->
             <a >
-                <img src="./img/logo.png" alt="Logo" class="nav-pic" width="90px" height="30px">
+                <img src="./img/logo.png" alt="Logo" class="nav-pic" width="100px" height="50px">
             </a>
 
             <!-- Link Home -->
@@ -34,9 +34,9 @@
 <br/>
 <br/>
 <br/>
-<div class ="bic">
+<div class ="bics">
     <div class="profile">
-        <img src="./pokeball.svg" alt="User Logo" width=100 height=100>
+        <img src="./img/pokeball.svg" alt="User Logo" width=100 height=100>
       <!--  <img th:src="${logo}" alt="User Logo" width=100 height=100> -->
       <h2><span >PokeGai</span></h2>
         <button>Carte</button>
